# rudra-training

coap_eg/: Cargo.toml
coap_eg/src/: chat.rs  client.rs  main.rs  message.pest
motor-control/: control.py  gui_control.py  js_control.py  sabertooth_control.py  serial_talk.py
notes/: session1.org  session2.org  session3.org  session4.org  session5.org
