[package]
name = "coap_eg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "chat"
path = "src/chat.rs"

[dependencies]
coap-lite = "0.11.0"
color-eyre = "0.5"
eyre = "0.6.8"
tokio = { version = "1", features = ["full"] }
console = "0.15.1"
dialoguer = "0.10.2"
pest = "2.0"
pest_derive = "2.0"

[profile.dev.package.backtrace]
opt-level = 3
